# Sentient-Trader-RL

./: 001_create_tables.sql  002_seed_data.sql  003_create_ppi_scores_table.sql  004_create_replays_table.sql  005_create_reports_table.sql  006_create_actors_table.sql  007_seed_actors.sql  Dockerfile  FINRL_INTEGRATION.md  README.md  TRAINING.md  __init__.py  action-log.tsx  actor-card.tsx  actors.ts  agent-avatar.tsx  env.md  env.py  env_finrl.py  globals.css  grok-regret.ts  grok.ts  infer.py  input.tsx  layout.tsx  main.py  market-chart.tsx  metrics-panel.tsx  nash-meter.tsx  package.json  page.tsx  ppi.ts  progress.tsx  pyproject.toml  railway.toml  render.yaml  report.py  requirements.txt  route.ts  sentient_trader_colab.ipynb  (+5 more)
